# waka

./: .clippy.toml  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md  SECURITY.md  SPEC.md  SPEC_GAPS.md  STABLE_INTERFACES.md  cliff.toml  demo.tape  deny.toml  dist-workspace.toml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  docs.yml  release.yml
completions/: _waka  _waka.ps1  waka.bash  waka.elv  waka.fish
crates/waka/: Cargo.toml  build.rs
crates/waka-api/: Cargo.toml  README.md
crates/waka-api/examples/: basic_usage.rs
crates/waka-api/src/: client.rs  error.rs  lib.rs  params.rs  types.rs
crates/waka-api/tests/: client.rs  fixtures.rs
crates/waka-cache/: Cargo.toml
crates/waka-cache/src/: lib.rs
crates/waka-config/: Cargo.toml
crates/waka-config/src/: config.rs  credentials.rs  error.rs  lib.rs
crates/waka-render/: Cargo.toml
crates/waka-render/src/: breakdown.rs  error.rs  format.rs  goals.rs  leaderboard.rs  lib.rs  options.rs  projects.rs  summary.rs  theme.rs  utils.rs
crates/waka-render/src/snapshots/: waka_render__breakdown__tests__snapshot_breakdown_csv.snap  waka_render__breakdown__tests__snapshot_breakdown_json.snap  waka_render__breakdown__tests__snapshot_breakdown_plain.snap  waka_render__breakdown__tests__snapshot_breakdown_table.snap  waka_render__error__tests__snapshot_colored_full.snap  waka_render__error__tests__snapshot_plain_full.snap  waka_render__goals__tests__snapshot_render_goals_csv.snap  waka_render__goals__tests__snapshot_render_goals_plain.snap  waka_render__leaderboard__tests__snapshot_render_leaderboard_csv.snap  waka_render__leaderboard__tests__snapshot_render_leaderboard_plain.snap  waka_render__projects__tests__snapshot_render_projects_plain.snap  waka_render__projects__tests__snapshot_render_projects_rich.snap  waka_render__summary__tests__snapshot_render_csv.snap  waka_render__summary__tests__snapshot_render_json.snap  waka_render__summary__tests__snapshot_render_plain.snap  waka_render__summary__tests__snapshot_render_table.snap
crates/waka-tui/: Cargo.toml
crates/waka-tui/src/: app.rs  event.rs  lib.rs  ui.rs
crates/waka-tui/src/widgets/: activity.rs  goals_panel.rs  languages.rs  mod.rs  projects.rs  status_bar.rs  today.rs  week.rs
crates/waka/src/: auth.rs  cli.rs  commands.rs  error.rs  main.rs  spinner.rs
crates/waka/tests/: auth_flow.rs  stats_flow.rs
docs/: book.toml
docs/src/: SUMMARY.md  authentication.md  changelog.md  completions.md  configuration.md  contributing.md  exit-codes.md  faq.md  installation.md  integrations.md  introduction.md  man-pages.md  waka-api.md
docs/src/commands/: auth.md  cache.md  changelog.md  completions.md  config.md  dashboard.md  editors.md  goals.md  index.md  languages.md  leaderboard.md  projects.md  prompt.md  report.md  stats.md  today.md  update.md  week.md
docs/theme/: custom.css
man/: waka-auth-login.1  waka-auth-logout.1  waka-auth-status.1  waka-auth-whoami.1  waka-auth.1  waka-cache-clear.1  waka-cache-info.1  waka-cache-path.1  waka-cache.1  waka-changelog.1  waka-completions.1  waka-config-edit.1  waka-config-reset.1  waka-config-set.1  waka-config-show.1  waka-config.1  waka-dashboard.1  waka-editors-list.1  waka-editors-top.1  waka-editors.1  waka-goals-list.1  waka-goals-watch.1  waka-goals.1  waka-languages-list.1  waka-languages-top.1  waka-languages.1  waka-leaderboard-show.1  waka-leaderboard.1  waka-projects-list.1  waka-projects-top.1  waka-projects.1  waka-prompt.1  waka-report-generate.1  waka-report-summary.1  waka-report.1  waka-stats-all-time.1  waka-stats-month.1  waka-stats-range.1  waka-stats-today.1  waka-stats-week.1  (+5 more)
tests/fixtures/: goals.json  leaderboard.json  projects.json  stats_last_7_days.json  summaries_today.json  summaries_week.json  user_current.json
tests/fixtures/errors/: 401_unauthorized.json  429_rate_limit.json  500_server_error.json
