[workspace]
members = [
    "crates/waka",
    "crates/waka-api",
    "crates/waka-cache",
    "crates/waka-config",
    "crates/waka-render",
    "crates/waka-tui",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.88.0"   # Effective MSRV — transitive deps require ≥1.88; see SPEC_GAPS.md
authors = ["waka contributors"]
license = "MIT"
repository = "https://github.com/mouwaficbdr/waka"
homepage = "https://github.com/mouwaficbdr/waka"
documentation = "https://docs.rs/waka-api"
readme = "README.md"
keywords = ["wakatime", "cli", "productivity", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

# ─────────────────────────────────────────────────────────────────────────────
# Shared dependencies — versions verified: 2026-03-01
#
# KEY BREAKING CHANGES vs original spec:
#
#   reqwest 0.12 → 0.13.2 (2026-02-06)
#     rustls is now DEFAULT — drop `default-features = false` + `rustls-tls`
#     Just `features = ["json"]` gives you a rustls-only, no-openssl build
#
#   ratatui 0.27 → 0.30.0
#     Modular workspace since 0.30 — re-exports crossterm as `ratatui::crossterm`
#     Separate crossterm dep only needed for `event-stream` feature
#
#   thiserror 1 → 2 — drop-in, no API changes
#   keyring 2 → 3 — minor API refinements, same interface
# ─────────────────────────────────────────────────────────────────────────────
[workspace.dependencies]

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP — 0.13+ uses rustls by default, no openssl, no extra flags needed
reqwest = { version = "0.13", features = ["json", "gzip", "stream", "query"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Config & XDG paths
directories = "5"
toml = "0.8"

# Credentials (macOS Keychain / Linux Secret Service / Windows Credential Manager)
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# Embedded key-value cache
sled = "0.34"

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help", "color"] }
clap_complete = "4"
clap_mangen = "0.2"

# TUI — ratatui 0.30 re-exports crossterm at `ratatui::crossterm`
# Declare crossterm separately only for `event-stream` feature
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Terminal output
comfy-table = "7"
indicatif = "0.17"
console = "0.15"
owo-colors = { version = "4", features = ["supports-colors"] }

# Archive extraction (used by waka update)
flate2 = "1"
tar = "0.4"
zip = "2"

# UI enhancement — Phase 2
supports-color = "3.0"
chrono-humanize = "0.2"
unicode-width = "0.2"
inquire = { version = "0.7", features = ["crossterm"] }

# Credentials obfuscation
base64 = "0.22"

# Password prompt (hidden input, no echo)
rpassword = "7"

# System notifications
notify-rust = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
wiremock = "0.6"
insta = { version = "1", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
