[package]
name = "waka-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration and credential management for waka"

[dependencies]
directories = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
keyring = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
