[package]
name = "waka"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WakaTime CLI — track your coding time from the terminal"

[dependencies]
waka-api = { path = "../waka-api" }
waka-cache = { path = "../waka-cache" }
waka-config = { path = "../waka-config" }
waka-render = { path = "../waka-render" }
waka-tui = { path = "../waka-tui" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
rpassword = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
directories = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_mangen = { workspace = true }
